--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -57,7 +57,7 @@
             </div>
         </nav>
     </header>
-    <main class="min-100vh gap-30" id="profile">
+    <main>
         <div class="box width-100 padding-zero">
             <img class="main-img" src="/img/maria-c.jpg">
             <div>
