--- a/src/views/comunity.ejs
+++ b/src/views/comunity.ejs
@@ -38,7 +38,7 @@
                     </button>
                 </div>
                 <span class="center">
-                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                    <div class="collapse navbar-collapse center" id="navbarContent">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
                                 <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
