--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -32,7 +32,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/home"><img src="img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -43,8 +44,7 @@
                     <div class="collapse navbar-collapse center" id="navbarContent" style="">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
-                                    href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
                                 <img src="img/icon-dark-mode-black.png">
@@ -57,17 +57,17 @@
     </header>
     <main>
         <div class="recipes-box gap-40">
-            <div class="view-recipes-top flex-row">
+            <div class="view-recipes-top">
                 <div class="view-recipes-header flex-column gap-30">
-                    <div class="flex-row gap-30">
+                    <div class="header-info flex-row gap-30">
                         <img class="view-recipes-profile-img rounded-circle" src="img/maria-c.jpg">
                         <div class="flex-column">
-                            <div class="view-recipes-username flex-row gap-20">
+                            <div class="view-recipes-username flex-row gap-10 flex-wrap">
                                 <span class="font chocolate-brown bold big">Maria Carolina Bevervanso </span>
                                 <span class="font yellow bold">@Mariasina</span>
                             </div>
                             <span class="font small green">5 receitas</span>
-                            <span class="font small bold"><img src="img/icon-private.png"> receita privada</span>
+                            <span class="font small bold"><img src="img/icon-post-view-1.png"> receita privada</span>
                         </div>
                     </div>
                     <div class="flex-column">
@@ -75,17 +75,21 @@
                     </div>
                 </div>
                 <div class="view-recipes-content flex-column gap-20">
-                    <div class="recipe-title-and-favorite flex-row">
+                    <div class="recipe-title-and-favorite flex-wrap flex-row">
                         <h2 class="font chocolate-brown very-big bold">Pizza de Queijo</h2>
                         <div class="view-recipes-favorite">
                             <img class="icon" src="img/star-icon.png">
                         </div>
                     </div>
-                    <div>
-                        <img class="icon" src="img/icon-clock-green.png">
-                        <span class="font green">1h30</span>
-                        <img class="icon" src="img/icon-portions-green.png">
-                        <span class="font green">2 porções</span>
+                    <div class="flex-wrap">
+                        <div>
+                            <img class="icon" src="img/icon-clock-green.png">
+                            <span class="font green">1h30</span>
+                        </div>
+                        <div>
+                            <img class="icon" src="img/icon-portions-green.png">
+                            <span class="font green">2 porções</span>
+                        </div>
                     </div>
                     <div>
                         <span class="small-box box-green white">Salgado</span>
@@ -102,7 +106,7 @@
                     </div>
                 </div>
             </div>
-            <div class="view-recipes-bottom flex-row">
+            <div class="view-recipes-bottom">
                 <div class="view-recipes-ingredients flex-column">
                     <div class="recipes-ingredients-title">
                         <img class="icon" src="img/icon-ingredients.png">
