Fixed the sign-3 page and now it redirects to the user's home page

--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -67,11 +67,11 @@
                 </div>
                 <div class="view-recipes-content flex-column gap-20">
                     <div class="recipe-title-and-favorite flex-row">
-                        <input type="text" placeholder="Título" required>
+                        <input type="text" class="font" placeholder="Título" required>
                     </div>
                     <div class="recipe-info">
                         <img class="icon" src="img/icon-clock-green.png">
-                        <input type="text" placeholder="0h00" required>
+                        <input type="text" class="font small" placeholder="0h00" required>
                         <img class="icon" src="img/icon-portions-green.png">
                         <input type="number" placeholder="1" min="1" required>
                         <img class="icon" id="post_view_setting" src="img/icon-post-view-1-bigger.png" alt="Vizualização do post">
@@ -144,8 +144,7 @@
                         </div>
                     </div>
                     <div class="recipe-description font chocolate-brown">
-                        <textarea name="description" id="" maxlength="255" required>descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição
-                        </textarea>
+                        <textarea name="description" id="" maxlength="255" placeholder="Descrição" required></textarea>
                     </div>
                 </div>
             </div>
