--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -77,7 +77,7 @@
                                 <img src="/img/people-icon.png">
                                 <span class="font chocolate-brown small">503 seguidores</span>
                             </div>
-                            <button class="button small bold hover">Visualizar</button>
+                            <button class="button small bold hover"><a class="white text-decoration-none" href="/profile/<%= this_user.username %>">Visualizar</a></button>
                         </div>
                     </div>
                 </div>
