--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -24,7 +24,9 @@
     <link rel="stylesheet" type="text/css" href="/css/edit_recipes_style.css">
 
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/header_style.css">
+
     <title>Adicionar Receita</title>
 </head>
 
@@ -33,8 +35,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="/img/logo-white-green.png"
-                            class="logo-icon"></a>
+                    <a class="padding-zero margin-zero hover" href="/home/<%= this_user.username %>"><img
+                            src="/img/logo-white-green.png" class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -42,13 +44,14 @@
                     </button>
                 </div>
                 <span class="center">
-                    <div class="collapse navbar-collapse center" id="navbarContent" style="">
+                    <div class="collapse navbar-collapse center" id="navbarContent">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration hover"
+                                    href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <img src="img/icon-dark-mode-black.png">
+                                <img src="/img/icon-dark-mode-black.png" class="hover">
                             </li>
                         </ul>
                     </div>
@@ -57,31 +60,34 @@
         </nav>
     </header>
     <main>
-        <form class="recipes-box gap-40">
+        <form action="/<%= this_user.username %>/add-recipe" method="post" class="recipes-box gap-40">
             <div class="view-recipes-top flex-row">
                 <div class="view-recipes-header flex-column gap-30">
                     <div class="flex-column">
-                        <img class="recipes-img" id="imgFoto" src="img/add-photo-image.jpg">
+                        <img class="recipes-img" id="imgFoto" src="/img/add-photo-image.jpg">
                     </div>
-                    <input type="file" id="flImage" name="foto" id="foto" accept="image/*" placeholder="Teste" hidden>
+                    <input type="file" id="flImage" name="recipe_image" id="foto" accept="image/*" placeholder="Teste"
+                        hidden>
                 </div>
                 <div class="view-recipes-content flex-column gap-20">
                     <div class="recipe-title-and-favorite flex-row">
-                        <input type="text" class="font" placeholder="Título" required>
+                        <input type="text" class="font" name="recipe_name" placeholder="Título" required>
                     </div>
                     <div class="recipe-info">
-                        <img class="icon" src="img/icon-clock-green.png">
-                        <input type="text" class="font small" placeholder="0h00" required>
-                        <img class="icon" src="img/icon-portions-green.png">
-                        <input type="number" placeholder="1" min="1" required>
-                        <img class="icon" id="post_view_setting" src="img/icon-post-view-1-bigger.png" alt="Vizualização do post">
+                        <img class="icon" src="/img/icon-clock-green.png">
+                        <input type="text" class="font small" name="recipe_duration" placeholder="0h00" required>
+                        <img class="icon" src="/img/icon-portions-green.png">
+                        <input type="number" class="font small" name="recipe_portions" placeholder="1" min="1" required>
+                        <img class="icon hover" id="post_view_setting" src="/img/icon-post-view-1-bigger.png"
+                            alt="Vizualização do post">
                     </div>
                     <div class="recipe-types flex-row">
                         <div class="recipe-type-box">
 
                         </div>
-                        <div class="recipe-type-add">
-                            <img class="icon" data-bs-toggle="modal" data-bs-target="#types_meals" src="img/plus-icon.png">
+                        <div class="recipe-type-add hover">
+                            <img class="icon" data-bs-toggle="modal" data-bs-target="#types_meals"
+                                src="/img/plus-icon.png">
                         </div>
                         <div class="modal fade" id="types_meals" tabindex="-1" aria-hidden="true">
                             <div class="modal-dialog">
@@ -144,49 +150,49 @@
                         </div>
                     </div>
                     <div class="recipe-description font chocolate-brown">
-                        <textarea name="description" id="" maxlength="255" placeholder="Descrição" required></textarea>
+                        <textarea name="recipe_description" id="" maxlength="255" placeholder="Descrição"
+                            required></textarea>
                     </div>
                 </div>
             </div>
             <div class="edit-recipes-bottom gap-40">
                 <div class="view-recipes-ingredients flex-column gap-20">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="img/icon-ingredients.png">
+                        <img class="icon" src="/img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
                     </div>
                     <div class="font chocolate-brown flex-column gap-20" id="ingredients">
                         <div class="flex-row gap-20">
-                            <input class= "width-50px" type="number" placeholder="1" min="1" required>
-                            <input class= "width-70" type="text" placeholder="Ingrediente" maxlength="255" required>
+                            <input class="width-50px" type="number" placeholder="1" min="1" required>
+                            <input class="width-70" type="text" placeholder="Ingrediente" maxlength="255" required>
                         </div>
                     </div>
                     <div>
-                        <img class="icon" src="img/icon-delete.png">
-                        <img class="icon" id="add_input_button" src="img/plus-icon.png">
+                        <img class="icon hover" src="/img/icon-delete.png">
+                        <img class="icon hover" id="add_input_button" src="/img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar ingrediente</span>
                     </div>
                 </div>
                 <div class="view-recipes-steps flex-column gap-20">
                     <div class="recipes-ingredients-title">
-                        <img class="icon" src="img/icon-preparation.png">
+                        <img class="icon" src="/img/icon-preparation.png">
                         <span class="font chocolate-brown bold big">Modo de Preparo</span>
                     </div>
                     <div class="font chocolate-brown flex-column gap-20" id="steps">
                         <div class="flex-row gap-20">
-                            <input class= "width-50px" type="number" placeholder="1" min="1" required>
-                            <textarea name="" id=""
-                                required>Passo</textarea>
+                            <input class="width-50px" type="number" placeholder="1" min="1" required>
+                            <textarea name="" id="" class="font" placeholder="Passo" required></textarea>
                         </div>
                     </div>
                     <div>
-                        <img class="icon" src="img/icon-delete.png">
-                        <img class="icon" id="add_textarea_button" src="img/plus-icon.png">
+                        <img class="icon hover" src="/img/icon-delete.png">
+                        <img class="icon hover" id="add_textarea_button" src="/img/plus-icon.png">
                         <span class="yellow font bold small">Adicionar modo de preparo</span>
                     </div>
                 </div>
             </div>
             <div class="view-recipes-button">
-                <div class="edit-button">
+                <div class="edit-button hover">
                     <button>Salvar</button>
                 </div>
             </div>
