--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -138,7 +138,7 @@
             </article>
         </div>
         <div class="button-more">
-            <a href="/add-recipe"><img class="hover" src="/img/plus-icon.png"></a>
+            <a href="/<%= this_user.username %>/add-recipe"><img class="hover" src="/img/plus-icon.png"></a>
         </div>
     </main>
 </body>
