Working on multer

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -117,7 +117,7 @@
                     <div class="recipe box hover smallerhover">
                         <img class="recipe-img" src="<%= recipe.image %>">
                         <div class="recipe-text">
-                            <span class="chocolate-brown superbold"><%= recipe.title %></span>
+                            <span class="chocolate-brown superbold"><%= recipe.name %></span>
                             <div class="recipe-info">
                                 <div class="icon-info">
                                     <img src="/img/icon-clock-green.png" alt="clock">
