working on add recipe type backend

--- a/src/views/add_recipe.ejs
+++ b/src/views/add_recipe.ejs
@@ -193,7 +193,7 @@
             </div>
             <div class="view-recipes-button">
                 <div class="edit-button hover">
-                    <button>Salvar</button>
+                    <button type="submit">Salvar</button>
                 </div>
             </div>
         </form>
