--- a/src/views/add_recipe_type.ejs
+++ b/src/views/add_recipe_type.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
@@ -30,7 +30,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/home"><img src="/img/logo-white-green.png" class="logo-icon"></a>
+                    <a class="padding-zero margin-zero" href="/home"><img src="/img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -41,8 +42,7 @@
                     <div class="collapse navbar-collapse center" id="navbarContent" style="">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="font chocolate-brown superbold no-decoration"
-                                    href="/"><span>Sair</span></a>
+                                <a class="font chocolate-brown superbold no-decoration" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
                                 <img src="/img/icon-dark-mode-black.png">
@@ -57,22 +57,25 @@
         <div class="edit-recipe-type">
             <div class="box gap-40">
                 <h2 class="font chocolate-brown bold big">Adicionar tipo de receita</h2>
-                <div class="recipe-type-name" >
-                    <input id="color-box" type="text" placeholder="Nome do tipo de receita">
-                </div>
-                <div class="flex-row type-select-color gap-30">
-                    <div class="color-select flex-column">
-                        <h3 class="chocolate-brown font bold">Cor de fundo:</h3>
-                        <input id="color-selector-background" type="color" value="#C08332">
+                <form action="/<%= this_user.username %>/add-recipe" method="post">
+                    <div class="recipe-type-name">
+                        <input name="recipe_type_name" id="color-box" type="text" placeholder="Nome do tipo de receita">
                     </div>
-                    <div class="color-select flex-column">
-                        <h3 class="chocolate-brown font bold">Cor da fonte:</h3>
-                        <input id="color-selector-font" type="color" value="#ffffff">
+                    <div class="flex-row type-select-color gap-30">
+                        <div class="color-select flex-column">
+                            <h3 class="chocolate-brown font bold">Cor de fundo:</h3>
+                            <input name="recipe_type_bg_color" id="color-selector-background" type="color"
+                                value="#C08332">
+                        </div>
+                        <div class="color-select flex-column">
+                            <h3 class="chocolate-brown font bold">Cor da fonte:</h3>
+                            <input name="recipe_type_txt_color" id="color-selector-font" type="color" value="#ffffff">
+                        </div>
                     </div>
-                </div>
-                <div class="save-button">
-                    <button>Salvar</button>
-                </div>
+                    <div class="save-button">
+                        <button type="submit">Salvar</button>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
