--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -87,7 +87,7 @@
                 <div class="flex-row width-100 gap-10 flex-start flex-wrap">
                     <div class="meal font supersmall white bold half center">Café da manhã</div>
                 </div>
-                <button class="width-100 bg-yellow"><a class="white text-decoration-none" href="">Adicionar</a></button>
+                <a class="white text-decoration-none width-100" href="/<%= this_user.username %>/add-recipe-type/"><button class="width-100 bg-yellow">Adicionar</button></a>
             </div>
             <div class="box third gap-20 space-between">
                 <span class="font chocolate-brown superbold big width-100">Minhas refeições</span>
@@ -96,7 +96,7 @@
                     <div class="meal font supersmall white bold half center">Café da manhã</div>
                     <div class="meal font supersmall white bold half center">Café da manhã</div>
                 </div>
-                <button class="width-100 bg-yellow"><a class="white text-decoration-none" href="">Adicionar</a></button>
+                <a class="white text-decoration-none" href="/<%= this_user.username %>/add-meal/"><button class="width-100 bg-yellow">Adicionar</button></a>
             </div>
             <div class="box third flex-colum space-betweenn gap-10">
                 <div class="width-max height-100 center flex-column max-width">
